documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef int HCARD;
typedef int ERRVAL;

P71W32API VOID __stdcall PC708_XmtRd(LPUSHORT buf,USHORT framenum,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtFreqExx(USHORT framefreq,USHORT intfreq,USHORT framecount,ULONG bcconfigval,USHORT bctotal,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

P71W32API MSGADDR __stdcall PC708_XmtIndex(USHORT framenum,HCARD handleval);

P71W32API USHORT __stdcall PC708_XmtNumberRd(HCARD handleval);

P71W32API VOID __stdcall PC708_XmtNumberWr(USHORT brdnum,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtPeriod(ULONG frameperiod,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtPeriodEx(ULONG frameperiod,USHORT intfreq,USHORT framecount,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_XmtPeriodExx(ULONG frameperiod,USHORT intfreq,USHORT framecount,ULONG bcconfigval,USHORT bctotal,ULONG intconfigval,USHORT inttotal,ULONG msgconfigval,HCARD handleval);

P71W32API VOID __stdcall PC708_XmtRd(LPUSHORT buf,USHORT framenum,HCARD handleval);

P71W32API VOID __stdcall PC708_XmtSizeWr(USHORT mode,HCARD handleval);

/**
*
*  Transmitter configuration options
*
**/

#define XMTCFG_DEFAULT       0x00000000L	//Select all default settings
#define XMTCFG_BUSA          0x00000000L    //Message will be transmitted on bus A (default)
#define XMTCFG_BUSB          0x00000004L    //Message will be transmitted on bus B 
#define XMTCFG_NOSWAP		 0x00000000L	//Disable bit swapping (default)
#define XMTCFG_SWAP			 0x00004000L	//Enable bit swapping

/**
*
*  Receiver configuration options
*
**/

#define RCVCFG_DEFAULT       0x00000000L	//Select all default settings
#define RCVCFG_BUSA 	     0x00000000L	//Respond to channel A (default)
#define RCVCFG_BUSB	         0x00010000L	//Respond to channel B
#define RCVCFG_NOSWAP		 0x00000000L	//Disable bit swapping (default)
#define RCVCFG_SWAP			 0x00008000L	//Enable bit swapping
#define RCVCFG_WORDSYNC      0x00000000L	//Sync on words (default)
#define RCVCFG_BITSYNC       0x00080000L	//Sync on each bit


/**
*
*  Bus controller configuration options
*
**/

#define BCCFG_DEFAULT       0x00000000L     //Select all default settings
#define BCCFG_ENABLE        0x00000000L     //Enable bus controller (default)
#define BCCFG_DISABLE       0x00000001L     //Disable bus controller
#define BCCFG_TRIGNONE      0x00000000L     //No trigger (default)
#define BCCFG_TRIGEXT       0x00000010L     //Trigger external
#define BCCFG_TRIGSTART     0x00000020L     //Trigger external start
#define BCCFG_NOINTHALT     0x00000000L     //Do not generate interrupt on halt (default)
#define BCCFG_INTHALT       0x00000100L     //Generate interrupt on halt
#define BCCFG_NOINTPAUSE    0x00000000L     //Do not generate interrupt on pause (default)
#define BCCFG_INTPAUSE      0x00000200L     //Generate interrupt on pause
#define BCCFG_NOLOOPMAX     0x00000000L     //Disable maximum loop count (default)
#define BCCFG_LOOPMAX       0x00001000L     //Enable maximum loop count
#define BCCFG_NOSTEP        0x00000000L     //Disable single stepping (default)
#define BCCFG_STEP          0x00002000L     //Enable single stepping
#define BCCFG_NOSWAP		0x00000000L		//Disable bit swapping (default)
#define BCCFG_SWAP			0x00004000L		//Enable bit swapping
#define BCCFG_MC01          0x00000000L     //Select SA=00000 or SA=11111 for mode codes (default)
#define BCCFG_MC1           0x01000000L     //Select SA=11111 for mode codes
#define BCCFG_MC0           0x02000000L     //Select SA=00000 for mode codes
#define BCCFG_MCNONE        0x03000000L     //Disable mode codes
#define BCCFG_SYNCALL       0x00000000L     //*Sync on all messages (default)
#define BCCFG_SYNCSEL       0x40000000L     //*Selective sync

/**
*
*  Monitor configuration options
*
**/

#define MONCFG_DEFAULT      0x00000000L     //Select all default settings
#define MONCFG_FILLHALT     0x00000000L     //Enable monitor in fill and halt mode (default)
#define MONCFG_DISABLE      0x00000001L     //Disable monitor
#define MONCFG_CONTINUOUS   0x00000002L     //Enable monitor in continuous mode
#define MONCFG_DMA          0x00000004L     //Enable monitor in dma mode
#define MONCFG_FREE         0x00000008L     //Enable monitor in free mode
#define MONCFG_FAST         0x00000010L     //Enable monitor in fast mode
#define MONCFG_DELTA        0x00000020L     //Enable monitor in delta mode
#define MONCFG_NOINTFULL    0x00000000L     //Do not generate interrupt when monitor full (default)
#define MONCFG_INTFULL      0x00001000L     //Generate interrupt when monitor full
#define MONCFG_COMPLETE     0x00000000L     //Enable receiving complete words (default)
#define MONCFG_INCOMPLETE   0x00002000L     //Enable receiving incomplete words
#define MONCFG_MC01         0x00000000L     //Select SA=00000 or SA=11111 for mode codes (default)
#define MONCFG_MC1          0x00100000L     //Select SA=11111 for mode codes
#define MONCFG_MC0          0x00200000L     //Select SA=00000 for mode codes
#define MONCFG_MCNONE       0x00300000L     //Disable mode codes
#define MONCFG_16K          0x00000000L     //Allocate a 16K monitor buffer (default)
#define MONCFG_ALLAVAIL     0x01000000L     //Allocate all available memory to monitor buffer
#define MONCFG_32K          0x02000000L     //Allocate a 32K monitor buffer
#define MONCFG_64K          0x04000000L     //Allocate a 64K monitor buffer
#define MONCFG_128K         0x08000000L     //Allocate a 128K monitor buffer

/**
*
*  Remote terminal configuration options
*
**/

#define RTCFG_DEFAULT      0x00000000L      //Select all default settings
#define RTCFG_SIMULATE     0x00000000L      //Enable RT simulation (default)
#define RTCFG_DISABLE      0x00000001L      //Disable RT
#define RTCFG_MONITOR      0x00000002L      //Enable RT monitor
#define RTCFG_NOBCAST      0x00000000L      //Disable broadcast (default)
#define RTCFG_BCAST        0x00000100L      //Enable broadcast
#define RTCFG_NOAUTOBUSY   0x00000000L      //Disable auto busy (default)
#define RTCFG_AUTOBUSY     0x00000200L      //Enable auto busy
#define RTCFG_BUILD        0x00000000L      //Enable auto building (default)
#define RTCFG_NOBUILD      0x00000400L      //Disable auto building
#define RTCFG_STDB         0x00000000L      //Use MIL-STD-1553B standard (default)
#define RTCFG_STDA         0x00000800L      //Use MIL-STD-1553A standard
#define RTCFG_NODYNBC      0x00000000L      //Do not respond to dynamic BC mode code (default)
#define RTCFG_DYNBC        0x00001000L      //Respond to dynamic BC mode code
#define RTCFG_NOIMMCLR     0x00000000L      //Do not clear status word bits (default)
#define RTCFG_IMMCLR       0x00002000L      //Status word bits are cleared immediately
#define RTCFG_NOBCASTADDR  0x00000000L      //Disable broadcast handling for address (default)
#define RTCFG_BCASTADDR    0x00004000L      //Enable broadcast handling for address
#define RTCFG_NOSWAP       0x00000000L		//Disable bit swapping (default)
#define RTCFG_SWAP         0x00008000L		//Enable bit swapping
#define RTCFG_WORDSYNC     0x00000000L		//Sync on words (default)
#define RTCFG_BITSYNC      0x00080000L		//Sync on each bit
#define RTCFG_CHANAB       0x00000000L      //Respond to both channels (default)
#define RTCFG_CHANA        0x00020000L      //Respond to channel A
#define RTCFG_CHANB        0x00010000L      //Respond to channel B
#define RTCFG_CHANNONE     0x00030000L      //Respond to neither channel A nor B
#define RTCFG_MC01         0x00000000L      //Select SA=00000 or SA=11111 for mode codes (default)
#define RTCFG_MC1          0x01000000L      //Select SA=11111 for mode codes
#define RTCFG_MC0          0x02000000L      //Select SA=00000 for mode codes
#define RTCFG_MCNONE       0x03000000L      //Disable mode codes
#define RTCFG_SYNCALL      0x00000000L      //*Sync on all messages (default)
#define RTCFG_SYNCSEL      0x40000000L      //*Selective sync
#define RTCFG_WIPE         0x00000000L      //Enables message clear (default)
#define RTCFG_NOWIPE       0x80000000L      //Disables message clear
#define RTCFG_WIPE0        0x00000000L      //Initialize data with zeros (default)
#define RTCFG_WIPE123      0x01000000L      //Initialize data with incrementing values
#define RTCFG_WIPECWD      0x02000000L      //Initialize data with command word

/**
*
*  Serial configuration options
*
**/

#define SERCFG_DEFAULT      0x00000000L     //Select all default settings
#define SERCFG_CONTINUOUS   0x00000000L     //Enable continuous mode (default)
#define SERCFG_DISABLE      0x00000001L     //Disable free mode
#define SERCFG_FREE         0x00000002L     //Enable free mode
#define SERCFG_NOINTEMPTY   0x00000000L     //Do not generate interrupt when empty (default)
#define SERCFG_INTEMPTY     0x00000010L     //Generate interrupt when empty

/**
*
*  Interrupt log list configuration options
*
**/

#define INTCFG_DEFAULT      0x00000000L     //Select all default settings
#define INTCFG_ENABLE       0x00000000L     //Enable interrupt log list (default)
#define INTCFG_DISABLE      0x00000001L     //Disable interrupt log list

/**
*
*  Monitor configuration options
*
**/

#define LISTCFG_DEFAULT    0x00000000L      //Select all default settings
#define LISTCFG_PINGPONG   0x00000000L      //Enable ping-pong mode (default)
#define LISTCFG_DISABLE    0x00000001L      //Disable list buffer
#define LISTCFG_CONTINUOUS 0x00000002L      //Enable continuous mode
#define LISTCFG_FREE       0x00000004L      //Enable free mode
#define LISTCFG_NOINT      0x00000000L      //Do not generate interrupt when list buffer empty/full (default)
#define LISTCFG_INT        0x00000010L      //Generate interrupt when list buffer empty/full

/**
*
*  Info types
*
**/

#define INFOTYPE_PLAT      0x0001		//Returns the PC708 platform type
#define INFOTYPE_PROD      0x0002		//Returns the PC708 product type
#define INFOTYPE_REV       0x0003		//Returns the PC708 revision number
#define INFOTYPE_VERSION   0x0004		//Returns the PC708 version number
#define INFOTYPE_DATE      0x0005		//Returns the PC708 version date
#define INFOTYPE_TRANSMIT  0x0006		//Returns whether the PC708 has a transmitter
#define INFOTYPE_RECEIVE   0x0007		//Returns whether the PC708 has a receiver
#define INFOTYPE_DASH      0x0008		//Returns the PC708 dash number
#define INFOTYPE_MODEL     0x0009		//Returns the PC708 model number
#define INFOTYPE_MAXCOUNT  0x000A		//Returns the number of terminals the PC1553-3 can simulate
#define INFOTYPE_MULTIMODE 0x000B		//Returns whether PC708 can simulate multi-modes
#define INFOTYPE_ERRORGEN  0x000C		//Returns whether PC708 can generate errors
#define INFOTYPE_CONCURMON 0x000D		//Returns whether PC708 has a concurrent monitor
#define INFOTYPE_MONFILTER 0x000E		//Returns whether PC708 has a monitor filter
#define INFOTYPE_USERCODE  0x000F		//Returns whether PC708 handles user code
#define INFOTYPE_LISTBUF   0x0010		//Returns whether PC708 handles list buffering
#define INFOTYPE_MONFAST   0x0011		//Returns whether PC708 has a fast monitor
#define INFOTYPE_MONDMA    0x0012		//Returns whether PC708 has a dma monitor
#define INFOTYPE_DUAL	   0x0013		//Returns whether PC708 has dual xmt/rcv capability
#define INFOTYPE_BITSYNC   0x0014		//Returns whether PC708 has bit sync capability

/**
*
*  Error configuration options
*
**/

#define ERRDEF_NONE       0x00000000L       //Disable error generation (default)
#define ERRDEF_GAP        0x00010000L       //Generate zero crossing error
#define ERRDEF_CNTWRDABS  0x00020000L       //Generate an absolute word count error
#define ERRDEF_CNTWRDREL  0x00040000L       //Generate a relative count error
#define ERRDEF_CNTBIT     0x00080000L       //Generate a bit count error
#define ERRDEF_MAN1       0x00100000L       //Generate manchester error on first half of bit
#define ERRDEF_MAN2       0x00200000L       //Generate manchester error on second half of bit
#define ERRDEF_SYNC       0x00400000L       //Generate a sync error
#define ERRDEF_PAR        0x00800000L       //Generate a parity error
#define ERRDEF_ZEROX      0x01000000L       //Generate zero crossing error