documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.CS

        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtFreqExx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtFreqExx(UInt16 framefreq, UInt16 intfreq, UInt16 framecount, UInt32 bcconfigval, UInt16 bctotal, UInt32 intconfigval, UInt16 inttotal, UInt32 msgconfigval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtIndex@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_XmtIndex(UInt16 framenum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtNumberRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_XmtNumberRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtNumberWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_XmtNumberWr(UInt16 brdnum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtPeriod@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtPeriod(UInt32 frameperiod, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtPeriodEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtPeriodEx(UInt32 frameperiod, UInt16 intfreq, UInt16 framecount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtPeriodExx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_XmtPeriodExx(UInt32 frameperiod, UInt16 intfreq, UInt16 framecount, UInt32 bcconfigval, UInt16 bctotal, UInt32 intconfigval, UInt16 inttotal, UInt32 msgconfigval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_XmtRd(ref UInt16 buf, UInt16 framenum, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_XmtSizeWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_XmtSizeWr(UInt16 mode, UInt32 handleval);

        /**
        *
        *  Transmitter configuration options
        *
        **/

        public const UInt32 XMTCFG_DEFAULT = 0x00000000;
        public const UInt32 XMTCFG_BUSA = 0x00000000;
        public const UInt32 XMTCFG_BUSB = 0x00000004;
        public const UInt32 XMTCFG_NOSWAP = 0x00000000;
        public const UInt32 XMTCFG_SWAP = 0x00004000;

        /**
        *
        *  Receiver configuration options
        *
        **/

        public const UInt32 RCVCFG_DEFAULT = 0x00000000;
        public const UInt32 RCVCFG_BUSA = 0x00000000;
        public const UInt32 RCVCFG_BUSB = 0x00010000;
        public const UInt32 RCVCFG_NOSWAP = 0x00000000;
        public const UInt32 RCVCFG_SWAP = 0x00008000;
        public const UInt32 RCVCFG_WORDSYNC = 0x00000000;
        public const UInt32 RCVCFG_BITSYNC = 0x00080000;

        /**
        *
        *  Bus controller configuration options
        *
        **/

        public const UInt32 BCCFG_DEFAULT = 0x00000000;
        public const UInt32 BCCFG_ENABLE = 0x00000000;
        public const UInt32 BCCFG_DISABLE = 0x00000001;
        public const UInt32 BCCFG_TRIGNONE = 0x00000000;
        public const UInt32 BCCFG_TRIGEXT = 0x00000010;
        public const UInt32 BCCFG_TRIGSTART = 0x00000020;
        public const UInt32 BCCFG_NOINTHALT = 0x00000000;
        public const UInt32 BCCFG_INTHALT = 0x00000100;
        public const UInt32 BCCFG_NOINTPAUSE = 0x00000000;
        public const UInt32 BCCFG_INTPAUSE = 0x00000200;
        public const UInt32 BCCFG_NOLOOPMAX = 0x00000000;
        public const UInt32 BCCFG_LOOPMAX = 0x00001000;
        public const UInt32 BCCFG_NOSTEP = 0x00000000;
        public const UInt32 BCCFG_STEP = 0x00002000;
        public const UInt32 BCCFG_NOSWAP = 0x00000000;
        public const UInt32 BCCFG_SWAP = 0x00004000;
        public const UInt32 BCCFG_MC01 = 0x00000000;
        public const UInt32 BCCFG_MC1 = 0x01000000;
        public const UInt32 BCCFG_MC0 = 0x02000000;
        public const UInt32 BCCFG_MCNONE = 0x03000000;
        public const UInt32 BCCFG_SYNCALL = 0x00000000;
        public const UInt32 BCCFG_SYNCSEL = 0x40000000;

        /**
        *
        *  Monitor configuration options
        *
        **/

        public const UInt32 MONCFG_DEFAULT = 0x00000000;
        public const UInt32 MONCFG_FILLHALT = 0x00000000;
        public const UInt32 MONCFG_DISABLE = 0x00000001;
        public const UInt32 MONCFG_CONTINUOUS = 0x00000002;
        public const UInt32 MONCFG_DMA = 0x00000004;
        public const UInt32 MONCFG_FREE = 0x00000008;
        public const UInt32 MONCFG_FAST = 0x00000010;
        public const UInt32 MONCFG_DELTA = 0x00000020;
        public const UInt32 MONCFG_NOINTFULL = 0x00000000;
        public const UInt32 MONCFG_INTFULL = 0x00001000;
        public const UInt32 MONCFG_COMPLETE = 0x00000000;
        public const UInt32 MONCFG_INCOMPLETE = 0x00002000;
        public const UInt32 MONCFG_MC01 = 0x00000000;
        public const UInt32 MONCFG_MC1 = 0x00100000;
        public const UInt32 MONCFG_MC0 = 0x00200000;
        public const UInt32 MONCFG_MCNONE = 0x00300000;
        public const UInt32 MONCFG_16K = 0x00000000;
        public const UInt32 MONCFG_ALLAVAIL = 0x01000000;
        public const UInt32 MONCFG_32K = 0x02000000;
        public const UInt32 MONCFG_64K = 0x04000000;
        public const UInt32 MONCFG_128K = 0x08000000;

        /**
        *
        *  Remote terminal configuration options
        *
        **/

        public const UInt32 RTCFG_DEFAULT = 0x00000000;
        public const UInt32 RTCFG_SIMULATE = 0x00000000;
        public const UInt32 RTCFG_DISABLE = 0x00000001;
        public const UInt32 RTCFG_MONITOR = 0x00000002;
        public const UInt32 RTCFG_NOBCAST = 0x00000000;
        public const UInt32 RTCFG_BCAST = 0x00000100;
        public const UInt32 RTCFG_NOAUTOBUSY = 0x00000000;
        public const UInt32 RTCFG_AUTOBUSY = 0x00000200;
        public const UInt32 RTCFG_BUILD = 0x00000000;
        public const UInt32 RTCFG_NOBUILD = 0x00000400;
        public const UInt32 RTCFG_STDB = 0x00000000;
        public const UInt32 RTCFG_STDA = 0x00000800;
        public const UInt32 RTCFG_NODYNBC = 0x00000000;
        public const UInt32 RTCFG_DYNBC = 0x00001000;
        public const UInt32 RTCFG_NOIMMCLR = 0x00000000;
        public const UInt32 RTCFG_IMMCLR = 0x00002000;
        public const UInt32 RTCFG_NOBCASTADDR = 0x00000000;
        public const UInt32 RTCFG_BCASTADDR = 0x00004000;
        public const UInt32 RTCFG_NOSWAP = 0x00000000;
        public const UInt32 RTCFG_SWAP = 0x00008000;
        public const UInt32 RTCFG_WORDSYNC = 0x00000000;
        public const UInt32 RTCFG_BITSYNC = 0x00080000;
        public const UInt32 RTCFG_CHANAB = 0x00000000;
        public const UInt32 RTCFG_CHANA = 0x00020000;
        public const UInt32 RTCFG_CHANB = 0x00010000;
        public const UInt32 RTCFG_CHANNONE = 0x00030000;
        public const UInt32 RTCFG_MC01 = 0x00000000;
        public const UInt32 RTCFG_MC1 = 0x01000000;
        public const UInt32 RTCFG_MC0 = 0x02000000;
        public const UInt32 RTCFG_MCNONE = 0x03000000;
        public const UInt32 RTCFG_SYNCALL = 0x00000000;
        public const UInt32 RTCFG_SYNCSEL = 0x40000000;
        public const UInt32 RTCFG_WIPE = 0x00000000;
        public const UInt32 RTCFG_NOWIPE = 0x80000000;
        public const UInt32 RTCFG_WIPE0 = 0x00000000;
        public const UInt32 RTCFG_WIPE123 = 0x01000000;
        public const UInt32 RTCFG_WIPECWD = 0x02000000;

        /**
        *
        *  Serial configuration options
        *
        **/

        public const UInt32 SERCFG_DEFAULT = 0x00000000;
        public const UInt32 SERCFG_CONTINUOUS = 0x00000000;
        public const UInt32 SERCFG_DISABLE = 0x00000001;
        public const UInt32 SERCFG_FREE = 0x00000002;
        public const UInt32 SERCFG_NOINTEMPTY = 0x00000000;
        public const UInt32 SERCFG_INTEMPTY = 0x00000010;

        /**
        *
        *  Interrupt log list configuration options
        *
        **/

        public const UInt32 INTCFG_DEFAULT = 0x00000000;
        public const UInt32 INTCFG_ENABLE = 0x00000000;
        public const UInt32 INTCFG_DISABLE = 0x00000001;

        /**
        *
        *  Monitor configuration options
        *
        **/

        public const UInt32 LISTCFG_DEFAULT = 0x00000000;
        public const UInt32 LISTCFG_PINGPONG = 0x00000000;
        public const UInt32 LISTCFG_DISABLE = 0x00000001;
        public const UInt32 LISTCFG_CONTINUOUS = 0x00000002;
        public const UInt32 LISTCFG_FREE = 0x00000004;
        public const UInt32 LISTCFG_NOINT = 0x00000000;
        public const UInt32 LISTCFG_INT = 0x00000010;

        /**
        *
        *  Info types
        *
        **/

        public const UInt32 INFOTYPE_PLAT = 0x0001;		//Returns the PC708 platform type
        public const UInt32 INFOTYPE_PROD = 0x0002;		//Returns the PC708 product type
        public const UInt32 INFOTYPE_REV = 0x0003;		//Returns the PC708 revision number
        public const UInt32 INFOTYPE_VERSION = 0x0004;		//Returns the PC708 version number
        public const UInt32 INFOTYPE_DATE = 0x0005;		//Returns the PC708 version date
        public const UInt32 INFOTYPE_TRANSMIT = 0x0006;		//Returns whether the PC708 has a transmitter
        public const UInt32 INFOTYPE_RECEIVE = 0x0007;		//Returns whether the PC708 has a receiver
        public const UInt32 INFOTYPE_DASH = 0x0008;		//Returns the PC708 dash number
        public const UInt32 INFOTYPE_MODEL = 0x0009;		//Returns the PC708 model number
        public const UInt32 INFOTYPE_MAXCOUNT = 0x000A;		//Returns the number of terminals the PC1553-3 can simulate
        public const UInt32 INFOTYPE_MULTIMODE = 0x000B;		//Returns whether PC708 can simulate multi-modes
        public const UInt32 INFOTYPE_ERRORGEN = 0x000C;		//Returns whether PC708 can generate errors
        public const UInt32 INFOTYPE_CONCURMON = 0x000D;		//Returns whether PC708 has a concurrent monitor
        public const UInt32 INFOTYPE_MONFILTER = 0x000E;		//Returns whether PC708 has a monitor filter
        public const UInt32 INFOTYPE_USERCODE = 0x000F;		//Returns whether PC708 handles user code
        public const UInt32 INFOTYPE_LISTBUF = 0x0010;		//Returns whether PC708 handles list buffering
        public const UInt32 INFOTYPE_MONFAST = 0x0011;		//Returns whether PC708 has a fast monitor
        public const UInt32 INFOTYPE_MONDMA = 0x0012;		//Returns whether PC708 has a dma monitor
        public const UInt32 INFOTYPE_DUAL = 0x0013;		//Returns whether PC708 has dual xmt/rcv capability
        public const UInt32 INFOTYPE_BITSYNC = 0x0014;		//Returns whether PC708 has bit sync capability

        /**
        *
        *  Error configuration options
        *
        **/

        public const UInt32 ERRDEF_NONE = 0x00000000;
        public const UInt32 ERRDEF_GAP = 0x00010000;
        public const UInt32 ERRDEF_CNTWRDABS = 0x00020000;
        public const UInt32 ERRDEF_CNTWRDREL = 0x00040000;
        public const UInt32 ERRDEF_CNTBIT = 0x00080000;
        public const UInt32 ERRDEF_MAN1 = 0x00100000;
        public const UInt32 ERRDEF_MAN2 = 0x00200000;
        public const UInt32 ERRDEF_SYNC = 0x00400000;
        public const UInt32 ERRDEF_PAR = 0x00800000;
        public const UInt32 ERRDEF_ZEROX = 0x01000000;
